--- a/src/styles.css
+++ b/src/styles.css
@@ -115,5 +115,5 @@ footer {
 }
 
 footer a:is(:hover, :focus) {
-  color: var(--mid);
+  text-decoration: underline;
 }
